2010-06-13  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* Makefile.in, crc.c, aprx.h, kiss.c, ttyreader.c, interface.c:
	    Separated KISS processing to kiss.c, and CRC processing
	    to crc.c.  Disabled unused codes.

	* pbuf.c, historydb.c, dupecheck.c:
	    Shrink RAM usage, cellmalloc() does perfectly good job
	    of using free-chains, no need to do it in applications.

	* interface.c, pbuf.c:
	    The pbuf_new() has a limit on maximum total size that
	    a packet can be: 2150 bytes.  If ax25len + tnc2len are
	    more than that, pbuf_new() returns NULL.

	* historydb.c, historydb.h:
	    Instead of historydb instance specific history entry pools,
	    have one global pool.

2010-06-12  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* cellmalloc.c:
	    Remove pthread_mutex_t usage, not needed in this application!
	    Conditionalize debugging code.

	* pbuf.c, aprx.c, aprx.h:
	    Using cellmalloc() on pbuf storage. Support up to 2150 byte
	    received AX.25 frames. (Up to 7 pbufs of that size on 16 kB
	    cell arena .. and there never should be larger than around
	    512 byte AX.25 frames.)

	* dupecheck.c:
	    Shrink dupecheck to 16 kB per alloc arena (from 256 KB).
	    That should be enough for a very busy 1200 bps channel,
	    and probably even for a 9600 bps channel.

	* filter.c:
	    Shrink filter cell storage to 4 kB per alloc arena (from 512 kB!)

	* historydb.c:
	    Shrink historydb cell storage to 32 kB per alloc arena (from 128 kB)

	* debian/aprx.init:
	    Pleasing init-script behaviour during package re-install

	* telemetry.c, doc/aprx-manual.odt:
	    Stagger telemetry transmissions a bit.
	    All RF reported telemetry sources are reported at the same time,
	    but telemetry data is time-wise separated from labels, and labels
	    are sent so that 3 different labels are sent every 2 hours, and
	    total label carouselle time is 6 hours.

	* aprx.c:
	    Giving this version code: APRX1K

	* telemetry.c: